@@ -36,6 +36,7 @@ This release includes the following bugfixes:
  o don't shrink SO_SNDBUF on windows for those who have it set large already
  o connect next bug
  o invalid file name characters handling on Windows
+ o double close() on the primary socket with libcurl-NSS
 
 This release includes the following known bugs:
 
@@ -48,5 +49,6 @@ advice from friends like these:
  Michal Marek, Eric Wong, Guenter Knauf, Peter Sylvester, Daniel Johnson,
  Claes Jakobsson, Sven Anders, Chris Mumford, John P. McCaskey,
  Constantine Sapuntzakis, Michael Stillwell, Tom Mueller, Dan Fandrich,
+ Kevin Baughman
 
         Thanks! (and sorry if I forgot to mention someone)
